Bugfix 5000 - New UI: Early checkbox label wrap

--- a/Website/Composite/styles/default/fields/checkbox.less
+++ b/Website/Composite/styles/default/fields/checkbox.less
@@ -10,6 +10,11 @@ ui|checkbox {
     display: block;
     width: 100%;
     padding: 2px;
+
+    ui|datalabeltext {
+        float: none;
+        margin-left: 18px;
+    }
 }
 
 
