--- a/Website/Composite/styles/default/fields/fields-base.less
+++ b/Website/Composite/styles/default/fields/fields-base.less
@@ -58,10 +58,6 @@ ui|field {
                 width: 100%;
             }
         }
-
-        ui|datalabeltext {
-            width: 163px;
-        }
     }
 
     &.nodesc ui|fielddata {
@@ -306,7 +302,6 @@ ui|nullpostbackdatadialog {
 ui|datalabeltext {
     display: block;
     float: left;
-    width: 195px;
     padding-left: 5px;
     padding-top: 2px;
     user-select: none; /* See notes in DocumentManager.js */
