--- a/Website/Composite/styles/default/fields/radio.less
+++ b/Website/Composite/styles/default/fields/radio.less
@@ -18,7 +18,9 @@ ui|radio {
     }
 
     ui|datalabeltext {
-        padding-top: 3px;
+        padding-top: 5px;
+        float: none;
+        margin-left :18px;
     }
 
     &.disabled {
